--- a/app/templates/admin/articles/edit_form.html
+++ b/app/templates/admin/articles/edit_form.html
@@ -24,10 +24,21 @@
                             <option value="{{ category.id }}" {% if article is not undefined and category.id == article.category_id %} selected {% endif %}>{{ category.title }}</option>
                         {% endfor %}
                     </select>
-                    {#  form.category(class='form-control',required='required', placeholder='Catégorie vidéo') #}
                 </div>
             </div>
             {% if current_user.is_admin %}
+                <div class="form-group row">
+                <label class="col-sm-2 control-label">Auteur</label>
+                <div class="col-sm-10">
+                    <select name="auteur" id="auteur" class="form-control" required>
+                        <option value=""> -- Auteur article --</option>
+                        {% for auteur in auteurs %}
+                            <option value="{{ auteur.id }}" data-auteur="{{article.user_id}}" {% if article is not undefined and auteur.id == article.user_id %} selected {% endif %}>{{ auteur.name }}</option>
+                        {% endfor %}
+                    </select>
+                   
+                </div>
+            </div>
                 <div class="form-group row">
                     <label class="col-sm-2 control-label">Etat</label>
                     <label for="published" class="minimal col-sm-10">
